# joke-father-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  joke-father.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  joke-father.rockspec  joke-father_sdk.lua  joke-father_types.lua
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  jokefather_sdk.py  jokefather_types.py  pyproject.toml
py/core/: context.py  control.py  operation.py  response.py  result.py
py/entity/: joke_entity.py
py/feature/: cache_feature.py  debug_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_joke_direct.py  test_joke_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  feature_hook.py  fetcher.py  make_context.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  prepare_headers.py  prepare_method.py  prepare_params.py  register.py  result_basic.py  result_headers.py  transform_request.py
(+412 files in other folders)
